--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "summernote": "^0.8.12",
         "sweetalert2": "^9.4.0",
         "toastr": "^2.1.4"
     }
