--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js?id=87561842d3663d3b14d6",
     "/css/app.css": "/css/app.css?id=8f05c8aa625c00d3ba76",
-    "/css/client.css": "/css/client.css?id=d34660e8a32d9def0a0c",
-    "/js/client.js": "/js/client.js?id=5a652f1e2d90343864ab"
+    "/css/client.css": "/css/client.css?id=c88af9f6d87253debe55",
+    "/js/client.js": "/js/client.js?id=059a4be8d4d0ed8fef8f",
+    "/js/simple_product.js": "/js/simple_product.js?id=8220774a28c1e89c2da6"
 }
