feat(Frontend): Code logic comment and ajax show comment

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=87561842d3663d3b14d6",
+    "/js/app.js": "/js/app.js?id=c29ab5a0ce1e398b368e",
     "/css/app.css": "/css/app.css?id=8f05c8aa625c00d3ba76",
     "/css/client.css": "/css/client.css?id=c88af9f6d87253debe55",
-    "/js/client.js": "/js/client.js?id=059a4be8d4d0ed8fef8f",
-    "/js/simple_product.js": "/js/simple_product.js?id=8220774a28c1e89c2da6"
+    "/js/client.js": "/js/client.js?id=87f1f8c7361071d20e72",
+    "/js/simple_post.js": "/js/simple_post.js?id=f49564ed4336d831f616",
+    "/js/simple_product.js": "/js/simple_product.js?id=a7951509d8302465c921"
 }
