--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "admin-lte": "^3.0.1",
         "moment": "^2.24.0",
         "summernote": "^0.8.12",
         "sweetalert2": "^9.4.0",
