--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/hot
-/public/storage
+/public/storage/framework
+/public/storage/log
 /storage/*.key
 /vendor
 .env
@@ -15,3 +16,4 @@ yarn-error.log
 /public/client
 /public/dist
 /public/plugins
+/public/storage
