--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "laraveldaily/laravel-invoices": "^1.3",
         "tightenco/ziggy": "^0.8.1"
     },
     "require-dev": {
